--- a/app/views/prototypes/starting/role.html
+++ b/app/views/prototypes/starting/role.html
@@ -24,12 +24,12 @@
           <div class="govuk-form-group">
 
             <h1 class="govuk-heading-xl">
-  Salary spend
+  Occupation/roles 
 </h1>
 
             
 <div class="govuk-inset-text">
-  Help
+  Include ...
 </div>
 
   <div class="govuk-form-group">
@@ -66,8 +66,8 @@
 </fieldset><br><br>
 
 
-          <a href="role" class="govuk-button show-continue" style="display: inline;">
-      Save and continue
+          <a href="answers-provider" class="govuk-button show-continue" style="display: inline;">
+      Save and Continue
     </a>
        
       </div>
