--- a/app/views/index.html
+++ b/app/views/index.html
@@ -29,7 +29,7 @@
       <p>Concept two - <a href="#">Self service</a></p><br>
 
       <h2 class="govuk-heading-s">Sprint two</h2>
-      <p>Starting - <a href="/prototypes/starting/details">0 to 20 - paper based data.</a></p><br>
+      <p>Starting - <a href="/prototypes/starting/details">Provider data collection</a></p><br>
 
       <p></p>
 
