--- a/app/views/prototypes/starting/confirmation.html
+++ b/app/views/prototypes/starting/confirmation.html
@@ -14,7 +14,7 @@
         <div class="govuk-width-container">
   <a href="#" class="govuk-back-link">Back</a>
 
-  <span class="govuk-caption-xl">Warwickshire college</span>
+  <span class="govuk-caption-xl">Impact Training Limited</span>
 
 
   
@@ -26,7 +26,7 @@
       <div class="govuk-grid-column-two-thirds">
         <div class="govuk-panel govuk-panel--confirmation">
           <h1 class="govuk-panel__title">
-            Staff data submitted
+            Workforce data submitted
           </h1>
           <div class="govuk-panel__body">
             Your reference number<br><strong>HDJ2123F</strong>
