--- a/app/views/prototypes/starting/one.html
+++ b/app/views/prototypes/starting/one.html
@@ -24,46 +24,40 @@
           <div class="govuk-form-group">
 
             <h1 class="govuk-heading-xl">
-  How many staff do you employ?
+  About your organisation
 </h1>
 
-            
-<div class="govuk-inset-text">
-  Include roles filled with tempoary staff but not agency workers.<br>
-  Include part-time staff.
-</div>
-
   <div class="govuk-form-group">
-  <fieldset class="govuk-fieldset">
-    
-    <div class="govuk-radios">
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
-        <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-          Up to 20 people
-        </label>
-      </div>
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
-        <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-          21 to 100 people
-        </label>
-      </div>
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
-        <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
-          101 + people
-        </label>
-      </div>
-      
-    </div>
-  </fieldset>
+  <fieldset class="govuk-fieldset" aria-describedby="citizenship-conditional-hint">
+    <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
+      <h2 class="govuk-heading-l">
+        How many teaching vacancies do you have now?</h2>
+    </legend>
+
+    <div class="govuk-inset-text">
+  Incude vacancies filled by agency staff
+</div>
+  
+    <div class="govuk-form-group">
+    <label class="govuk-label" for="address-postcode">
+      Total 
+    </label>
+    <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
+  </div><br><br>
+
 </div>
 
-</fieldset><br><br>
+
+      <h2 class="govuk-heading-l">
+        Do you have courses that are difficult to recruit for?</h2>
+    </legend>
+</div>
 
 
-          <a href="two" class="govuk-button show-continue" style="display: inline;">
+</fieldset>
+
+
+          <a href="staff" class="govuk-button show-continue" style="display: inline;">
       Save and continue
     </a>
        
