--- a/app/views/prototypes/starting/start.html
+++ b/app/views/prototypes/starting/start.html
@@ -22,12 +22,13 @@
         <h1 class="govuk-heading-xl">FE workforce collection</h1>
         <span class="govuk-caption-xl">August 2019 to September 2020</span><br>
 
-        <p class="govuk-body">You need to tell us about the people you employ - every year.</p>
+        <p class="govuk-body">You need to tell us about the people you employ - each year.</p>
 
         <ul class="govuk-list govuk-list--bullet">
-          <li>tell us about your workforce</li>
-          <li>submit your staff details by the dealine date</li>
-          <li>do something else</li>
+          <li>complete both parts - provider and staff details</li>
+          <li>submit your details by the dealine date</li>
+          <li></li>
+          
         </ul>
         <p class="govuk-body">You don't need to tell us about the staff of your subcontractors.</p>
 
@@ -40,11 +41,11 @@
 
         <h2 class="govuk-heading-m">Before you start</h2>
 
-        <p class="govuk-body">You can also <a class="govuk-link" href="#">register by post</a>.</p>
+        <p class="govuk-body">You can also <a class="govuk-link" href="#">complete by post</a>.</p>
 
-        <p class="govuk-body">The online service is also available in <a class="govuk-link" href="#">Welsh (Cymraeg)</a>.</p>
+        <p class="govuk-body">This online service is available in <a class="govuk-link" href="#">Welsh (Cymraeg)</a>.</p>
 
-        <p class="govuk-body">You cannot register for this service if you’re in the UK illegally.</p>
+        
       </div>
 
       <div class="govuk-grid-column-one-third">
