provider level questions

--- a/app/views/prototypes/starting/one.html
+++ b/app/views/prototypes/starting/one.html
@@ -31,7 +31,7 @@
   <fieldset class="govuk-fieldset" aria-describedby="citizenship-conditional-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h2 class="govuk-heading-l">
-        How many teaching vacancies do you have now?</h2>
+        How many vacant teaching posts do you have?</h2>
     </legend>
 
     <div class="govuk-inset-text">
@@ -40,17 +40,40 @@
   
     <div class="govuk-form-group">
     <label class="govuk-label" for="address-postcode">
-      Total 
+      Add the number of posts vacant on 1 September 2020
     </label>
     <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
-  </div><br><br>
+  </div>
 
-</div>
+</div><br><br><p></p>
 
 
       <h2 class="govuk-heading-l">
-        Do you have courses that are difficult to recruit for?</h2>
+        Did you have posts that were difficult to fill this year?</h2>
     </legend>
+</div>
+
+<div class="govuk-form-group">
+  <fieldset class="govuk-fieldset" aria-describedby="changed-name-hint">
+    
+    <span id="changed-name-hint" class="govuk-hint">
+      1 September 2020 - 31 August 2021
+    </span>
+    <div class="govuk-radios govuk-radios--inline">
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="changed-name" name="changed-name" type="radio" value="yes">
+        <label class="govuk-label govuk-radios__label" for="changed-name">
+          Yes
+        </label>
+      </div>
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="changed-name-2" name="changed-name" type="radio" value="no">
+        <label class="govuk-label govuk-radios__label" for="changed-name-2">
+          No
+        </label>
+      </div>
+    </div>
+  </fieldset>
 </div>
 
 
