--- a/app/views/prototypes/starting/staff.html
+++ b/app/views/prototypes/starting/staff.html
@@ -24,44 +24,27 @@
           <div class="govuk-form-group">
 
             <h1 class="govuk-heading-xl">
-  Salary spend
+  How much of your income was spent on staff salaries for 2020/21?
 </h1>
 
             
 <div class="govuk-inset-text">
-  Help
+  Enter the total amount for teaching and and non-teaching staff.
 </div>
 
-  <div class="govuk-form-group">
-    <label class="govuk-label" for="address-postcode">
-      Management
-    </label>
-    <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
-  </div>
+<div class="govuk-form-group">
+  <label class="govuk-label" for="width-10">
+    Total spend on staff salaries in £'s
+  </label>
+  <input class="govuk-input govuk-input--width-10" id="width-10" name="width-10" type="text">
+</div>
 
-
-  <div class="govuk-form-group">
-    <label class="govuk-label" for="address-postcode">
-      Teaching
-    </label>
-    <input class="govuk-input govuk-input--width-10" id="" name="" type="text">
-  </div>
-
-
-  <div class="govuk-form-group">
-    <label class="govuk-label" for="address-postcode">
-      Support
-    </label>
-    <input class="govuk-input govuk-input--width-10" id="" name="" type="text">
-  </div><br>
-
-
-  <div class="govuk-form-group">
-    <label class="govuk-label" for="#"><strong>
-      Total </strong>
-    </label>
-    <input class="govuk-input govuk-input--width-10" id="" name="" type="text">
-  </div>
+<div class="govuk-form-group">
+  <label class="govuk-label" for="width-10">
+    Your staff spend as a percentage of your total income %
+  </label>
+  <input class="govuk-input govuk-input--width-10" id="width-10" name="width-10" type="text">
+</div>
 
 </fieldset><br><br>
 
