--- a/app/views/prototypes/starting/role.html
+++ b/app/views/prototypes/starting/role.html
@@ -29,7 +29,7 @@
 
             
 <div class="govuk-inset-text">
-  Include ...
+  Gatsby standardisation of role names.
 </div>
 
   <div class="govuk-form-group">
