--- a/app/views/prototypes/starting/staff.html
+++ b/app/views/prototypes/starting/staff.html
@@ -29,7 +29,7 @@
 
             
 <div class="govuk-inset-text">
-  Enter the total amount for teaching and and non-teaching staff.
+  Enter the total amount for teaching and non-teaching staff.
 </div>
 
 <div class="govuk-form-group">
