--- a/app/views/prototypes/starting/start.html
+++ b/app/views/prototypes/starting/start.html
@@ -19,8 +19,8 @@
   <main class="govuk-main-wrapper " id="main-content" role="main">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-xl">FE workforce collection</h1>
-        <span class="govuk-caption-xl">August 2019 to September 2020</span><br>
+        <h1 class="govuk-heading-xl">FE staff collection</h1>
+        <span class="govuk-caption-xl">August 2020 to September 2021</span><br>
 
         <p class="govuk-body">You need to tell us about the people you employ - each year.</p>
 
@@ -60,12 +60,12 @@
             <ul class="govuk-list govuk-!-font-size-16">
               <li>
                 <a class="govuk-link" href="#">
-                  Related link
+                  View my own data
                 </a>
               </li>
               <li>
                 <a class="govuk-link" href="#">
-                  Related link
+                  View national data
                 </a>
               </li>
               <li>
