--- a/app/views/prototypes/staff-flow/upload.html
+++ b/app/views/prototypes/staff-flow/upload.html
@@ -22,34 +22,31 @@
       <div class="govuk-grid-column-two-thirds">
         
           <div class="govuk-form-group">
+ 
+    
+
 
             <h1 class="govuk-heading-xl">
-  How much of your income was spent on staff salaries?
+  Upload a file with your staff details 
 </h1>
 
-            
-<div class="govuk-inset-text">
-  Enter the total amount for teaching and non-teaching staff for 2020/21.
-</div>
 
 <div class="govuk-form-group">
-  <label class="govuk-label" for="width-10">
-    Total spend on staff salaries in £'s
+  <label class="govuk-label" for="file-upload-1">
+    Upload a file
   </label>
-  <input class="govuk-input govuk-input--width-10" id="width-10" name="width-10" type="text">
+  <input class="govuk-file-upload" id="file-upload-1" name="file-upload-1" type="file">
 </div>
 
-<div class="govuk-form-group">
-  <label class="govuk-label" for="width-10">
-    Your staff spend as a percentage of your total income %
-  </label>
-  <input class="govuk-input govuk-input--width-10" id="width-10" name="width-10" type="text">
+
+
 </div>
 
-</fieldset><br><br>
 
 
-          <a href="role" class="govuk-button show-continue" style="display: inline;">
+
+
+          <a href="staff" class="govuk-button show-continue" style="display: inline;">
       Save and continue
     </a>
        
