--- a/app/views/prototypes/staff-flow/start-staff.html
+++ b/app/views/prototypes/staff-flow/start-staff.html
@@ -32,7 +32,7 @@
         </ul>
         <p class="govuk-body">You don't need to tell us about the staff of your subcontractors.</p>
 
-        <a href="one" role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-8 govuk-button--start" data-module="govuk-button">
+        <a href="upload" role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-8 govuk-button--start" data-module="govuk-button">
           Start now
           <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" role="presentation" focusable="false">
             <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
@@ -60,12 +60,12 @@
             <ul class="govuk-list govuk-!-font-size-16">
               <li>
                 <a class="govuk-link" href="#">
-                  View my own data
+                  View my own staff data
                 </a>
               </li>
               <li>
                 <a class="govuk-link" href="#">
-                  View national data
+                  View national staff data
                 </a>
               </li>
               <li>
