--- a/app/views/prototypes/staff-flow/start-staff.html
+++ b/app/views/prototypes/staff-flow/start-staff.html
@@ -15,6 +15,7 @@
   
 
   <span class="govuk-caption-xl">Impact Training Limited</span>
+  <span class="govuk-caption-m">UKPRN: 21345671</span>
 
   <main class="govuk-main-wrapper " id="main-content" role="main">
     <div class="govuk-grid-row">
@@ -43,7 +44,7 @@
 
         <p class="govuk-body">You can also <a class="govuk-link" href="#">complete by post</a>.</p>
 
-        <p class="govuk-body">This online service is available in <a class="govuk-link" href="#">Welsh (Cymraeg)</a>.</p>
+        
 
         
       </div>
@@ -54,7 +55,7 @@
 
         <aside class="app-related-items" role="complementary">
           <h2 class="govuk-heading-m" id="subsection-title">
-            Subsection
+            My Account
           </h2>
           <nav role="navigation" aria-labelledby="subsection-title">
             <ul class="govuk-list govuk-!-font-size-16">
