--- a/app/views/prototypes/questions/home.html
+++ b/app/views/prototypes/questions/home.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block page_title %}
-  GOV.UK prototype kit
+  FE staff data collection
 {% endblock %}
 {% block beforeContent %}
   
@@ -19,19 +19,10 @@
 
     <div class="govuk-grid-column-three-quarters">
             
-   
-        <div class="information-banner" aria-labelledby="error-summary-title" role="alert" tabindex="-1"
-             data-module="error-summary">
-          
-            <p class="govuk-body"><span id="bannerText" class="govuk-!-font-weight-bold">ESFA support desk is unavailable from midday to 1pm today:</span>
-            <span id="bannerCont">we will monitor emails in case of emergencies.</span></p>
-        </div>
+        <h1 class="govuk-heading-s">Impact Training Limited</h1>
+        <span class="govuk-caption-l">UKPRN: 21345671</span><br>
 
-        <h2 class="govuk-heading-l">Make a submission
-            <span class="govuk-caption-l">R05 closes in 6 days</span>
-        </h2>
-
-        <!-- <a href="what_data_do_you_want_to_submit" class="get-started govuk-!-font-size-19">Submit an ILR, EAS or ESF file</a> -->
+        <h2 class="govuk-heading-l">Make a submission</h2>
 
         <div class="govuk-grid-row tile-group">
 
