--- a/app/views/prototypes/questions/start.html
+++ b/app/views/prototypes/questions/start.html
@@ -32,14 +32,15 @@
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-xl">FE staff return</h1>
-        <span class="govuk-caption-xl">August 2019 to September 2020</span><br>
+        <span class="govuk-caption-l">August 2019 to September 2020</span><br>
 
         <p class="govuk-body">Use this service to:</p>
 
         <ul class="govuk-list govuk-list--bullet">
-          <li>tell us about your workforce</li>
-          <li>update your name, address or other details</li>
-          <li>do something else</li>
+          <li>There are two parts to this collection - provider and staff details</li>
+          <li>You can save each section and return as many times as you need to before you submit</li>
+          <li>In the staff section you can choose to upload a file from your own internal system - or add your staff into a form one at a time.</li>
+          
         </ul>
 
         <p class="govuk-body">Registering takes around 5 minutes.</p>
