--- a/app/views/prototypes/staff-flow/home.html
+++ b/app/views/prototypes/staff-flow/home.html
@@ -18,6 +18,8 @@
        
 
     <div class="govuk-grid-column-three-quarters">
+        <span class="govuk-caption-xl">Impact Training Limited</span>
+  <span class="govuk-caption-m">UKPRN: 21345671</span>
             
    
         
