--- a/app/views/prototypes/staff-flow/start.html
+++ b/app/views/prototypes/staff-flow/start.html
@@ -15,6 +15,7 @@
   
 
   <span class="govuk-caption-xl">Impact Training Limited</span>
+  <span class="govuk-caption-m">UKPRN: 21345671</span>
 
   <main class="govuk-main-wrapper " id="main-content" role="main">
     <div class="govuk-grid-row">
