--- a/app/views/prototypes/starting/answers-provider.html
+++ b/app/views/prototypes/starting/answers-provider.html
@@ -14,7 +14,8 @@
         <div class="govuk-width-container">
   <a href="#" class="govuk-back-link">Back</a>
 
-  <span class="govuk-caption-xl">Impact Training Limited: provider data</span>        
+  <span class="govuk-caption-xl">Impact Training Limited</span> 
+  <span class="govuk-caption-l">UKPRN: 21345671</span>       
 
   <main class="govuk-main-wrapper " id="main-content" role="main">
     <div class="govuk-grid-row">
