--- a/app/views/prototypes/starting/one.html
+++ b/app/views/prototypes/starting/one.html
@@ -14,8 +14,8 @@
         <div class="govuk-width-container">
   <a href="#" class="govuk-back-link">Back</a>
 
-  <span class="govuk-caption-xl">Impact Training Limited</span>
-  <span class="govuk-caption-m">UKPRN: 21345671</span>
+  <h1 class="govuk-heading-m">Impact Training Limited
+  <span class="govuk-caption-m">UKPRN: 00012345</span></h1>
 
   <main class="govuk-main-wrapper " id="main-content" role="main">
     <div class="govuk-grid-row">
