--- a/app/views/prototypes/starting/start.html
+++ b/app/views/prototypes/starting/start.html
@@ -12,10 +12,9 @@
 
 
 <div class="govuk-width-container">
-  
 
   <h1 class="govuk-heading-m">Impact Training Limited
-  <span class="govuk-caption-m govuk-!-font-size-16">UKPRN: 00012345</span></h1>
+  <span class="govuk-caption-m">UKPRN: 00012345</span></h1>
 
   <main class="govuk-main-wrapper " id="main-content" role="main">
     <div class="govuk-grid-row">
