--- a/app/views/prototypes/staff-flow/mis.html
+++ b/app/views/prototypes/staff-flow/mis.html
@@ -24,13 +24,12 @@
           <div class="govuk-form-group">
 
             <h1 class="govuk-heading-xl">
-  How many staff do you employ?
+  Do you have a system with you staff details - that you'd like to upload?
 </h1>
 
             
 <div class="govuk-inset-text">
-  Include roles filled with tempoary staff but not agency workers.<br>
-  Include part-time staff.
+  You need to export this as a CSV file
 </div>
 
   <div class="govuk-form-group">
@@ -40,21 +39,16 @@
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-          Up to 20 people
+          Yes
         </label>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-          21 to 100 people
+          No
         </label>
       </div>
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
-        <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
-          101 + people
-        </label>
-      </div>
+      
       
     </div>
   </fieldset>
@@ -63,7 +57,7 @@
 </fieldset><br><br>
 
 
-          <a href="mis" class="govuk-button show-continue" style="display: inline;">
+          <a href="two" class="govuk-button show-continue" style="display: inline;">
       Save and continue
     </a>
        
