--- a/app/views/prototypes/starting/answers-provider.html
+++ b/app/views/prototypes/starting/answers-provider.html
@@ -104,10 +104,10 @@
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Percentage of total
+              Something
             </dt>
             <dd class="govuk-summary-list__value">
-              80%
+              0
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
