provider level questions

--- a/app/views/prototypes/starting/role.html
+++ b/app/views/prototypes/starting/role.html
@@ -67,7 +67,7 @@
 
 
           <a href="answers-provider" class="govuk-button show-continue" style="display: inline;">
-      Save and Continue
+      Save and continue
     </a>
        
       </div>
