--- a/app/views/prototypes/starting/answers-provider.html
+++ b/app/views/prototypes/starting/answers-provider.html
@@ -126,16 +126,13 @@
 
 
 
-        <h2 class="govuk-heading-m">Submit your data for 2017 - 2018</h2>
-
-        <p class="govuk-body">By submitting this notification you are confirming that, to the best of your knowledge, the details you are providing are correct.</p><br>
-
+        
         <form action="/form-handler" method="post" novalidate>
 
           <input type="hidden" name="answers-checked" value="true">
 
-          <a href="confirmation" class="govuk-button show-continue" style="display: inline;">
-      Accept and send
+          <a href="#" class="govuk-button show-continue" style="display: inline;">
+      Save and continue
     </a>
 
         </form>
