--- a/app/views/prototypes/staff-flow/ethnicity.html
+++ b/app/views/prototypes/staff-flow/ethnicity.html
@@ -14,8 +14,7 @@
         <div class="govuk-width-container">
   <a href="#" class="govuk-back-link">Back</a>
 
-   <span class="govuk-caption-xl">Warwickshire college</span>
-
+   <span class="govuk-caption-xl">Impact Training Limited</span>
 
   <main class="govuk-main-wrapper " id="main-content" role="main">
     <div class="govuk-grid-row">
@@ -25,73 +24,70 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        What is the ethnicity of your staff?
+        What is their ethnic group?
       </h1>
-    </legend><br>
-
-    <div class="govuk-form-group">
-    <label class="govuk-label" for="">
-      Asian or Asian British
-    </label>
-    <span id="ethnic-group-item-hint" class="govuk-hint govuk-radios__hint">
-          Include Asian background, for example, Bangladeshi, Chinese, Indian, Pakistani
+    </legend>
+    <div class="govuk-radios">
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group" name="ethnic-group" type="radio" value="asian-or-asian-british" aria-describedby="ethnic-group-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group">
+          Asian or Asian British
+        </label>
+        <span id="ethnic-group-item-hint" class="govuk-hint govuk-radios__hint">
+          Includes any Asian background, for example, Bangladeshi, Chinese, Indian, Pakistani
         </span>
-    <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
-  </div>
-
-    <div class="govuk-form-group">
-    <label class="govuk-label" for="">
-      Black, African, Black British or Caribbean
-    </label>
-    <span id="ethnic-group-item-hint" class="govuk-hint govuk-radios__hint">
-          Include Black background
+      </div>
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group-2" name="ethnic-group" type="radio" value="black-african-black-british-or-caribbean" aria-describedby="ethnic-group-2-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-2">
+          Black, African, Black British or Caribbean
+        </label>
+        <span id="ethnic-group-2-item-hint" class="govuk-hint govuk-radios__hint">
+          Includes any Black background
         </span>
-    <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
-  </div><div class="govuk-form-group">
-    <label class="govuk-label" for="">
-      Mixed or multiple ethnic groups
-    </label>
-    <span id="ethnic-group-item-hint" class="govuk-hint govuk-radios__hint">
-          Include Mixed background
+      </div>
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group-3" name="ethnic-group" type="radio" value="mixed-or-multiple-ethnic-groups" aria-describedby="ethnic-group-3-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-3">
+          Mixed or multiple ethnic groups
+        </label>
+        <span id="ethnic-group-3-item-hint" class="govuk-hint govuk-radios__hint">
+          Includes any Mixed background
         </span>
-    <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
-  </div><div class="govuk-form-group">
-    <label class="govuk-label" for="">
-      White
-    </label>
-    <span id="ethnic-group-item-hint" class="govuk-hint govuk-radios__hint">
+      </div>
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group-4" name="ethnic-group" type="radio" value="white" aria-describedby="ethnic-group-4-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-4">
+          White
+        </label>
+        <span id="ethnic-group-4-item-hint" class="govuk-hint govuk-radios__hint">
           Includes any White background
         </span>
-    <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
-  </div>
-
-  <div class="govuk-form-group">
-    <label class="govuk-label" for="">
-      Another ethnic group
-    </label>
-    <span id="ethnic-group-item-hint" class="govuk-hint govuk-radios__hint">
-          Include any other ethnic group, for example, Arab
+      </div>
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group-5" name="ethnic-group" type="radio" value="another-ethnic-group" aria-describedby="ethnic-group-5-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-5">
+          Another ethnic group
+        </label>
+        <span id="ethnic-group-5-item-hint" class="govuk-hint govuk-radios__hint">
+          Includes any other ethnic group, for example, Arab
         </span>
-    <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
-  </div>
-
-  <div class="govuk-form-group">
-    <label class="govuk-label" for="">
-      Prefer not to say
-    </label>
-    <span id="ethnic-group-item-hint" class="govuk-hint govuk-radios__hint">
-          Enter any prefer not to say
-        </span>
-    <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
-  </div>
+      </div>
+      <div class="govuk-radios__divider">or</div>
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group-7" name="ethnic-group" type="radio" value="prefer-not-to-say">
+        <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group-7">
+          Prefer not to say
+        </label>
+      </div>
+    </div>
+  </fieldset><br><br>
 
 
-  </fieldset>
-</div>
 
-
-          <a href="leaving" class="govuk-button show-continue" style="display: inline;">
-      Save and continue
+          
+          <a href="answers-staff" class="govuk-button show-continue" style="display: inline;">
+      Save and Continue
     </a>
        
       </div>
