--- a/app/views/prototypes/staff-flow/two.html
+++ b/app/views/prototypes/staff-flow/two.html
@@ -47,7 +47,7 @@
 </fieldset><br><br>
 
 
-          <a href="staff" class="govuk-button show-continue" style="display: inline;">
+          <a href="ethnicity" class="govuk-button show-continue" style="display: inline;">
       Save and continue
     </a>
        
