new collection idea

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -35,7 +35,10 @@
 
       <p>Starting - <a href="/prototypes/staff-flow/start-staff">Staff flow</a></p><br>
 
-      <p></p>
+      
+
+      <h2 class="govuk-heading-s">Sprint three</h2>
+      <p>New concept sending emails out to staff - <a href="/prototypes/collection/details">New collection</a></p><br>
 
       <h2 class="govuk-heading-m">Examples and documentation</h2>
 
