--- a/app/views/prototypes/collection/answers.html
+++ b/app/views/prototypes/collection/answers.html
@@ -22,15 +22,15 @@
 
         <h1 class="govuk-heading-xl">Check your answers</h1>
 
-        <h2 class="govuk-heading-m">Teacher John Smith</h2>
+        <h2 class="govuk-heading-m">Staff vacancies</h2>
 
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Date of Birth
+              Teaching vacancies
             </dt>
             <dd class="govuk-summary-list__value">
-              10.01.1992
+              10
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="one">
@@ -41,14 +41,14 @@
           </div>
          <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Ethnicity
+              Long-term subjects
             </dt>
             <dd class="govuk-summary-list__value">
-              Asian or Asian British
+              Construction, Hairdresssing
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="one">
-                Change<span class="govuk-visually-hidden"> Ethnicity</span>
+                Change<span class="govuk-visually-hidden"> name</span>
               </a>
             </dd>
           </div>
@@ -56,26 +56,52 @@
         </dl>
 
 
-        
+        <h2 class="govuk-heading-m">Proportion of funding spent on salaries</h2>
 
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Gender
+              Salary spend
             </dt>
             <dd class="govuk-summary-list__value">
-              Male
+              90%
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="two">
-                Change<span class="govuk-visually-hidden"> Gender</span>
+                Change<span class="govuk-visually-hidden"> previous application number</span>
               </a>
             </dd>
           </div>
 
           
 
-          
+          <!--<div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Support
+            </dt>
+            <dd class="govuk-summary-list__value">
+              10
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> home address</span>
+              </a>
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Total
+            </dt>
+            <dd class="govuk-summary-list__value">
+              30
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> licence period</span>
+              </a>
+            </dd>
+          </div>-->
 
         </dl>
 
