--- a/app/views/prototypes/collection/staff.html
+++ b/app/views/prototypes/collection/staff.html
@@ -1,16 +1,9 @@
 {% extends "layout.html" %}
 
 {% block page_title %}
-  FE staff data collection
+  GOV.UK prototype kit
 {% endblock %}
 {% block beforeContent %}
-
-{{ govukPhaseBanner({
-  tag: {
-    text: "prototype"
-  },
-  html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
-}) }}
   
 
 {% endblock %}
