--- a/app/views/prototypes/collection/two.html
+++ b/app/views/prototypes/collection/two.html
@@ -14,8 +14,7 @@
         <div class="govuk-width-container">
   <a href="#" class="govuk-back-link">Back</a>
 
-  <h1 class="govuk-heading-m">Impact Training Limited
-  <span class="govuk-caption-m">UKPRN: 00012345</span></h1>
+   <span class="govuk-caption-xl">Impact Training Limited</span>
 
 
   <main class="govuk-main-wrapper " id="main-content" role="main">
@@ -23,28 +22,29 @@
       <div class="govuk-grid-column-two-thirds">
         
           <div class="govuk-form-group">
- 
-    
-
 
             <h1 class="govuk-heading-xl">
-  Upload a file with your staff names and email addresses
+  Add your staff details 
 </h1>
 
-
-<div class="govuk-form-group">
-  <label class="govuk-label" for="file-upload-1">
-    Upload a file
+            
+<div class="govuk-inset-text">
+  Enter each staff member one by one
+</div>
+  <div class="govuk-form-group">
+  <label class="govuk-label" for="full-name">
+    Full name
   </label>
-  <input class="govuk-file-upload" id="file-upload-1" name="file-upload-1" type="file">
+  <input class="govuk-input" id="full-name" name="full-name" type="text" autocomplete="name" spellcheck="false">
 </div>
 
+  
 
+  
 
-</div>
+  <br>
 
-
-
+</fieldset><br><br>
 
 
           <a href="staff" class="govuk-button show-continue" style="display: inline;">
