--- a/app/views/prototypes/collection/answers-provider.html
+++ b/app/views/prototypes/collection/answers-provider.html
@@ -110,12 +110,15 @@
 
 
         
+        <form action="/form-handler" method="post" novalidate>
 
-        <a href="start" class="govuk-button show-continue" style="display: inline;">
+          <input type="hidden" name="answers-checked" value="true">
+
+          <a href="start-staff" class="govuk-button show-continue" style="display: inline;">
       Save and continue
     </a>
 
-        
+        </form>
 
       </div>
     </div>
