--- a/app/views/prototypes/collection/eight.html
+++ b/app/views/prototypes/collection/eight.html
@@ -14,8 +14,7 @@
         <div class="govuk-width-container">
   <a href="#" class="govuk-back-link">Back</a>
 
-  <h1 class="govuk-heading-m">Impact Training Limited
-  <span class="govuk-caption-m">UKPRN: 00012345</span></h1>
+  <span class="govuk-caption-xl">1 September 2017 - 31 August 2018<br> Question 8 of 9</span>
 
 
   <main class="govuk-main-wrapper " id="main-content" role="main">
@@ -23,32 +22,30 @@
       <div class="govuk-grid-column-two-thirds">
         
           <div class="govuk-form-group">
- 
-    
-
 
             <h1 class="govuk-heading-xl">
-  Upload a file with your staff names and email addresses
+  How many apprentices did you employ? 
 </h1>
 
+  
 
-<div class="govuk-form-group">
-  <label class="govuk-label" for="file-upload-1">
-    Upload a file
-  </label>
-  <input class="govuk-file-upload" id="file-upload-1" name="file-upload-1" type="file">
-</div>
-
-
-
-</div>
+  <div class="govuk-form-group">
+    <label class="govuk-label" for="address-postcode">
+      
+    </label>
+    <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
+  </div>
 
 
+  
+
+  
+
+</fieldset><br><br>
 
 
-
-          <a href="staff" class="govuk-button show-continue" style="display: inline;">
-      Save and continue
+          <a href="answers" class="govuk-button show-continue" style="display: inline;">
+      Save and Continue
     </a>
        
       </div>
