--- a/app/views/prototypes/collection/start.html
+++ b/app/views/prototypes/collection/start.html
@@ -12,36 +12,28 @@
 
 
 <div class="govuk-width-container">
-  
 
-  <span class="govuk-caption-xl">Impact Training Limited</span>
-  <span class="govuk-caption-m">UKPRN: 21345671</span>
+  <h1 class="govuk-heading-m">Impact Training Limited
+  <span class="govuk-caption-m">UKPRN: 00012345</span></h1>
 
   <main class="govuk-main-wrapper " id="main-content" role="main">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-xl">FE staff collection</h1>
-        <span class="govuk-caption-xl">August 2020 to September 2021</span><br>
+        <h1 class="govuk-heading-xl">FE staff collection
+        <span class="govuk-caption-xl">August 2020 to September 2021</span></h1><br>
 
         <p class="govuk-body">You need to tell us about the people you employ - each year.</p>
 
         <ul class="govuk-list govuk-list--bullet">
-          <li>complete both parts - provider and staff details</li>
-          <li>submit your details by the dealine date</li>
-        
+          <li>There are two parts to this collection - provider and staff details</li>
+          <li>You can save each section and return as many times as you need to before you submit</li>
+          <li>In the staff section you can choose to upload a file from your own internal system - or add your staff into a form one at a time.</li>
           
         </ul>
         <p class="govuk-body">You don't need to tell us about the staff of your subcontractors.</p>
 
         <a href="one" role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-8 govuk-button--start" data-module="govuk-button">
-          Organisation details
-          <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" role="presentation" focusable="false">
-            <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
-          </svg>
-        </a><br>
-
-        <a href="choose" role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-8 govuk-button--start" data-module="govuk-button">
-          Staff details
+          Start now
           <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" role="presentation" focusable="false">
             <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
           </svg>
@@ -51,18 +43,17 @@
 
         <p class="govuk-body">You can also <a class="govuk-link" href="#">complete by post</a>.</p>
 
-        <p class="govuk-body">This online service is available in <a class="govuk-link" href="#">Welsh (Cymraeg)</a>.</p>
+        
 
         
       </div>
 
       <div class="govuk-grid-column-one-third">
 
-        <!-- The Related items component is not part of GOV.UK Frontend but will be styled if used in the Prototype Kit -->
 
         <aside class="app-related-items" role="complementary">
           <h2 class="govuk-heading-m" id="subsection-title">
-            Subsection
+            My account
           </h2>
           <nav role="navigation" aria-labelledby="subsection-title">
             <ul class="govuk-list govuk-!-font-size-16">
