--- a/app/views/prototypes/collection/support.html
+++ b/app/views/prototypes/collection/support.html
@@ -11,37 +11,42 @@
 {% block content %}
 
 
-<div class="govuk-width-container">
+
+
   
 
-  <span class="govuk-caption-xl">Impact Training Limited</span>
-  <span class="govuk-caption-m">UKPRN: 21345671</span>
+
+    
+        <div class="govuk-width-container">
+  <div class="govuk-breadcrumbs">
+    <ol class="govuk-breadcrumbs__list">
+      <li class="govuk-breadcrumbs__list-item">
+        <a class="govuk-breadcrumbs__link" href="#">Home</a>
+      </li>
+      <li class="govuk-breadcrumbs__list-item">
+        <a class="govuk-breadcrumbs__link" href="#">Section</a>
+      </li>
+      <li class="govuk-breadcrumbs__list-item" aria-current="page">Subsection</li>
+    </ol>
+  </div>
 
   <main class="govuk-main-wrapper " id="main-content" role="main">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-xl">FE staff collection</h1>
-        <span class="govuk-caption-xl">August 2020 to September 2021</span><br>
+        <h1 class="govuk-heading-xl">Service name goes here</h1>
 
-        <p class="govuk-body">You need to tell us about the people you employ - each year.</p>
+        <p class="govuk-body">Use this service to:</p>
 
         <ul class="govuk-list govuk-list--bullet">
-          <li>complete both parts - provider and staff details</li>
-          <li>submit your details by the dealine date</li>
-        
-          
+          <li>do something</li>
+          <li>update your name, address or other details</li>
+          <li>do something else</li>
         </ul>
-        <p class="govuk-body">You don't need to tell us about the staff of your subcontractors.</p>
+
+        <p class="govuk-body">Registering takes around 5 minutes.</p>
 
         <a href="one" role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-8 govuk-button--start" data-module="govuk-button">
-          Organisation details
-          <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" role="presentation" focusable="false">
-            <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
-          </svg>
-        </a><br>
-
-        <a href="choose" role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-8 govuk-button--start" data-module="govuk-button">
-          Staff details
+          Start now
           <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" role="presentation" focusable="false">
             <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
           </svg>
@@ -49,11 +54,11 @@
 
         <h2 class="govuk-heading-m">Before you start</h2>
 
-        <p class="govuk-body">You can also <a class="govuk-link" href="#">complete by post</a>.</p>
+        <p class="govuk-body">You can also <a class="govuk-link" href="#">register by post</a>.</p>
 
-        <p class="govuk-body">This online service is available in <a class="govuk-link" href="#">Welsh (Cymraeg)</a>.</p>
+        <p class="govuk-body">The online service is also available in <a class="govuk-link" href="#">Welsh (Cymraeg)</a>.</p>
 
-        
+        <p class="govuk-body">You cannot register for this service if you’re in the UK illegally.</p>
       </div>
 
       <div class="govuk-grid-column-one-third">
@@ -68,12 +73,12 @@
             <ul class="govuk-list govuk-!-font-size-16">
               <li>
                 <a class="govuk-link" href="#">
-                  View my own data
+                  Related link
                 </a>
               </li>
               <li>
                 <a class="govuk-link" href="#">
-                  View national data
+                  Related link
                 </a>
               </li>
               <li>
@@ -87,7 +92,11 @@
 
       </div>
     </div>
-  </main>
+  
+</div>
 
+
+
+    </main>
 
 {% endblock %}
