--- a/app/views/prototypes/staff-flow/choose-new.html
+++ b/app/views/prototypes/staff-flow/choose-new.html
@@ -24,11 +24,14 @@
           <div class="govuk-form-group">
 
             <h1 class="govuk-heading-xl">
- Choose how you'd like to tell us your staff details
+  About your staff
 </h1>
 
             
-
+<div class="govuk-inset-text">
+  Include roles filled with tempoary staff but not agency workers.<br>
+  Include part-time staff.
+</div>
 
   <div class="govuk-form-group">
   <fieldset class="govuk-fieldset">
@@ -37,20 +40,21 @@
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-          Add each member yourself - adding all their details
+          Up to 20 people
         </label>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-          Send my staff an email so they can enter their own details into the system
+          21 to 100 people
         </label>
       </div>
-
-      <div class="govuk-inset-text">
-  You'll need to upload a CSV file with their names and email addresses
-</div>
-      
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
+        <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
+          101 + people
+        </label>
+      </div>
       
     </div>
   </fieldset>
@@ -59,7 +63,7 @@
 </fieldset><br><br>
 
 
-          <a href="two" class="govuk-button show-continue" style="display: inline;">
+          <a href="mis" class="govuk-button show-continue" style="display: inline;">
       Save and continue
     </a>
        
