new collection idea

--- a/app/views/prototypes/collection/answers-provider.html
+++ b/app/views/prototypes/collection/answers-provider.html
@@ -31,10 +31,30 @@
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              3
+              Yes 
             </dt>
             <dd class="govuk-summary-list__value">
-              .
+              3
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> name</span>
+              </a>
+            </dd>
+          </div>
+
+          
+        </dl>
+
+         
+
+        <dl class="govuk-summary-list govuk-!-margin-bottom-9">
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+             Difficult to fill
+            </dt>
+            <dd class="govuk-summary-list__value">
+              Maths - Construction level 2
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -72,7 +92,7 @@
               
             </dt>
             <dd class="govuk-summary-list__value">
-              ...
+              #
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
