--- a/app/views/prototypes/collection/mis.html
+++ b/app/views/prototypes/collection/mis.html
@@ -37,18 +37,18 @@
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-          Add each member yourself - adding all their details
+          Add each member yourself - adding all the information we need
         </label>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-          Send my staff an email so they can enter their own details into the system
+          Send us your staff email addresses - we will send them a link to add their own details
         </label>
       </div>
 
       <div class="govuk-inset-text">
-  You'll need to upload a CSV file with their names and email addresses
+  You can add their names and address here or upload a CSV file
 </div>
       
       
@@ -59,7 +59,7 @@
 </fieldset><br><br>
 
 
-          <a href="two" class="govuk-button show-continue" style="display: inline;">
+          <a href="upload" class="govuk-button show-continue" style="display: inline;">
       Save and continue
     </a>
        
