--- a/app/views/prototypes/collection/one.html
+++ b/app/views/prototypes/collection/one.html
@@ -45,42 +45,16 @@
     <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
   </div>
 
-</div><br><br><p></p>
+</div><br><br>
 
 
-      <h2 class="govuk-heading-l">
-        Did you have posts that were difficult to fill this year?</h2>
-    </legend>
-</div>
-
-<div class="govuk-form-group">
-  <fieldset class="govuk-fieldset" aria-describedby="changed-name-hint">
-    
-    <span id="changed-name-hint" class="govuk-hint">
-      1 September 2020 - 31 August 2021
-    </span>
-    <div class="govuk-radios govuk-radios--inline">
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="changed-name" name="changed-name" type="radio" value="yes">
-        <label class="govuk-label govuk-radios__label" for="changed-name">
-          Yes
-        </label>
-      </div>
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="changed-name-2" name="changed-name" type="radio" value="no">
-        <label class="govuk-label govuk-radios__label" for="changed-name-2">
-          No
-        </label>
-      </div>
-    </div>
-  </fieldset>
-</div>
+      
 
 
 </fieldset>
 
 
-          <a href="staff" class="govuk-button show-continue" style="display: inline;">
+          <a href="posts" class="govuk-button show-continue" style="display: inline;">
       Save and continue
     </a>
        
