--- a/app/views/prototypes/collection/start-staff.html
+++ b/app/views/prototypes/collection/start-staff.html
@@ -11,15 +11,14 @@
 {% block content %}
 
 
-<div class="govuk-width-container">
-  
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
+      <a href="#" class="govuk-back-link">Back</a>
+ 
 
   <h1 class="govuk-heading-m">Impact Training Limited
   <span class="govuk-caption-m">UKPRN: 00012345</span></h1>
 
-  <main class="govuk-main-wrapper " id="main-content" role="main">
-    <div class="govuk-grid-row">
-      <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-xl">FE staff collection</h1>
         <span class="govuk-caption-xl">August 2020 to September 2021</span><br>
 
