new collection idea

--- a/app/views/prototypes/collection/answers-provider.html
+++ b/app/views/prototypes/collection/answers-provider.html
@@ -37,7 +37,7 @@
               3
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
+              <a class="govuk-link" href="one-revisit">
                 Change<span class="govuk-visually-hidden"> name</span>
               </a>
             </dd>
@@ -57,7 +57,7 @@
               Maths - Construction level 2
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
+              <a class="govuk-link" href="posts-revisit">
                 Change<span class="govuk-visually-hidden"> name</span>
               </a>
             </dd>
@@ -77,46 +77,36 @@
               £360000
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
+              <a class="govuk-link" href="staff-revisit">
                 Change<span class="govuk-visually-hidden"> name</span>
               </a>
             </dd>
-
-
           </div>
 
+          
+        </dl>
 
+         
 
+        <dl class="govuk-summary-list govuk-!-margin-bottom-9">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              
-            </dt>
-            <dd class="govuk-summary-list__value">
-              #
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                <span class="govuk-visually-hidden"> name</span>
-              </a>
-            </dd>
-          </div>
-
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Percentage of total
+             Percentage of total
             </dt>
             <dd class="govuk-summary-list__value">
               80%
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
+              <a class="govuk-link" href="percentage">
                 Change<span class="govuk-visually-hidden"> name</span>
               </a>
             </dd>
           </div>
 
+          
         </dl>
+
+        
 
 
         
