--- a/app/views/prototypes/collection/mis.html
+++ b/app/views/prototypes/collection/mis.html
@@ -48,7 +48,7 @@
       </div>
 
       <div class="govuk-inset-text">
-  You can add their names and address here or upload a CSV file
+  You can add their names and email address or upload a CSV file with the information
 </div>
       
       
