--- a/app/views/prototypes/collection/one-revisit.html
+++ b/app/views/prototypes/collection/one-revisit.html
@@ -51,7 +51,7 @@
 </fieldset>
 
 
-          <a href="posts" class="govuk-button show-continue" style="display: inline;">
+          <a href="answers-provider" class="govuk-button show-continue" style="display: inline;">
       Save and continue
     </a>
        
