--- a/app/views/prototypes/collection/posts-revisit.html
+++ b/app/views/prototypes/collection/posts-revisit.html
@@ -59,7 +59,7 @@
 </fieldset>
 
 
-          <a href="staff" class="govuk-button show-continue" style="display: inline;">
+          <a href="answers-provider" class="govuk-button show-continue" style="display: inline;">
       Save and continue
     </a>
        
