--- a/app/views/prototypes/collection/mis.html
+++ b/app/views/prototypes/collection/mis.html
@@ -14,7 +14,8 @@
         <div class="govuk-width-container">
   <a href="#" class="govuk-back-link">Back</a>
 
-  <span class="govuk-caption-xl">Impact Training Limited</span>
+  <h1 class="govuk-heading-m">Impact Training Limited
+  <span class="govuk-caption-m">UKPRN: 00012345</span></h1>
 
 
   <main class="govuk-main-wrapper " id="main-content" role="main">
@@ -24,7 +25,7 @@
           <div class="govuk-form-group">
 
             <h1 class="govuk-heading-xl">
- Choose how you'd like to tell us your staff details
+ How you'd like to tell us your staff details
 </h1>
 
             
