new collection idea

--- a/app/views/prototypes/collection/mis.html
+++ b/app/views/prototypes/collection/mis.html
@@ -25,7 +25,7 @@
           <div class="govuk-form-group">
 
             <h1 class="govuk-heading-xl">
- How you'd like to tell us your staff details
+ How do you want to tell us your staff details
 </h1>
 
             
