new collection idea

--- a/app/views/prototypes/collection/answers-provider.html
+++ b/app/views/prototypes/collection/answers-provider.html
@@ -112,7 +112,7 @@
           <input type="hidden" name="answers-checked" value="true">
 
           <a href="start-staff" class="govuk-button show-continue" style="display: inline;">
-      Save and continue
+      Submit
     </a>
 
         </form>
