--- a/app/views/prototypes/collection/mis.html
+++ b/app/views/prototypes/collection/mis.html
@@ -49,7 +49,7 @@
       </div>
 
       <div class="govuk-inset-text">
-  You can add their names and email address or upload a CSV file with the information
+  You can add their names and email address or upload a file with the information
 </div>
       
       
@@ -60,7 +60,7 @@
 </fieldset><br><br>
 
 
-          <a href="upload" class="govuk-button show-continue" style="display: inline;">
+          <a href="add-staff" class="govuk-button show-continue" style="display: inline;">
       Save and continue
     </a>
        
