new collection idea

--- a/app/views/prototypes/collection/add-staff.html
+++ b/app/views/prototypes/collection/add-staff.html
@@ -121,7 +121,7 @@
 </fieldset><br><br>
 
 
-          <a href="staff" class="govuk-button show-continue" style="display: inline;">
+          <a href="staff-list" class="govuk-button show-continue" style="display: inline;">
       Save and continue
     </a>
        
