--- a/app/views/prototypes/collection/start-staff.html
+++ b/app/views/prototypes/collection/start-staff.html
@@ -64,6 +64,12 @@
                   View national staff data
                 </a>
               </li>
+
+              <li>
+                <a class="govuk-link" href="#">
+                  My profile
+                </a>
+              </li>
               <li>
                 <a href="#" class="govuk-link govuk-!-font-weight-bold">
                   More <span class="govuk-visually-hidden">in Subsection</span>
