--- a/app/views/prototypes/collection/mis.html
+++ b/app/views/prototypes/collection/mis.html
@@ -44,7 +44,7 @@
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-          Send us your staff email addresses - we will send them a link to add their own details
+          Send us your staff email addresses - we will send them a link to a portal to add their own details
         </label>
       </div>
 
