new collection idea

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -37,8 +37,10 @@
 
       
 
-      <h2 class="govuk-heading-s">Sprint three</h2>
-      <p>New concept sending emails out to staff - <a href="/prototypes/collection/details">New collection</a></p><br>
+      
+      <p>New concept sending emails out to staff - <a href="/prototypes/collection/details">New concept for collection</a></p><br>
+
+      <h2 class="govuk-heading-s">Sprint three</h2><br><br>
 
       <h2 class="govuk-heading-m">Examples and documentation</h2>
 
