--- a/app/views/prototypes/collection/mis.html
+++ b/app/views/prototypes/collection/mis.html
@@ -38,22 +38,32 @@
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-          Add each member yourself - adding all the information we need
+          Add all your staff details into this service
         </label>
-      </div>
+      </div><br><br>
+
+      <h2 class="govuk-heading-m">Or tell us your staff email addresses and we will send them a link to a portal to add their own details</h2>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-          Send us your staff email addresses - we will send them a link to a portal to add their own details
+          Add your staff email addresses by entering them into this service
         </label>
       </div>
 
-      <div class="govuk-inset-text">
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
+        <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
+          Upload a file from your own system - with their names and email addresses
+        </label>
+      </div>
+
+      <!--<div class="govuk-inset-text">
   You can add their names and email address or upload a file with the information
-</div>
-      
-      
+</div>-->
+
     </div>
+
+
   </fieldset>
 </div>
 
