--- a/app/views/prototypes/collection/staff-list.html
+++ b/app/views/prototypes/collection/staff-list.html
@@ -143,7 +143,7 @@
 
 
           <a href="#" class="govuk-button show-continue" >
-      Submit
+      Submit and send 
     </a>
        
       </div>
