new collection idea

--- a/app/views/prototypes/collection/staff-list.html
+++ b/app/views/prototypes/collection/staff-list.html
@@ -42,7 +42,7 @@
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="one-revisit">
-                Remove<span class="govuk-visually-hidden"> name</span>
+                Edit Remove<span class="govuk-visually-hidden"> name</span>
               </a>
             </dd>
           </div>
@@ -60,7 +60,7 @@
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="staff-revisit">
-                Remove<span class="govuk-visually-hidden"> name</span>
+                Edit Remove<span class="govuk-visually-hidden"> name</span>
               </a>
             </dd>
           </div>
@@ -143,7 +143,7 @@
 
 
           <a href="#" class="govuk-button show-continue" >
-      Submit and send 
+      Submit
     </a>
        
       </div>
